--- a/main.html
+++ b/main.html
@@ -15,7 +15,7 @@
 </head>
 <body>
   <div class="page-header" align=center>
-    <h1> Welcome to sdodson's OpenShift v3 Demo App! </h1>
+    <h1> Welcome the OpenShift v3 Demo App! </h1>
   </div>
 
   <div class="container">
